added relative file paths for image savefig()

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "19           5.1          3.8           1.5          0.3  setosa"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 289,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
     "iris.hist(figsize=(10, 10), color='#2986cc', edgecolor='#FF8B3C')\n",
     "\n",
     "plt.show()\n",
-    "#plt.savefig(\"histogram.jpeg\") #remove the hash comment if you want to save a copy of the histogram image generated\n",
+    "#plt.savefig(\"./Relevant Files/Images/histogram.jpeg\") #remove the hash comment if you want to save a copy of the histogram image generated\n",
     "plt.close()\n",
     "\n",
     "#REF https://matplotlib.org/stable/gallery/statistics/hist.html "
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,25 +654,25 @@
     "x = \"species\"\n",
     "sepallen = sns.violinplot(x=x, y=\"sepal_length\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(sepallen)\n",
-    "plt.savefig(\"sepal_length.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/sepal_length.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#sepal width\n",
     "sepalwid = sns.violinplot(x=x, y=\"sepal_width\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(sepalwid)\n",
-    "plt.savefig(\"sepal_width.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/sepal_width.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#petal length\n",
     "petallen = sns.violinplot(x=x, y=\"petal_length\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(petallen)\n",
-    "plt.savefig(\"petal_length.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/petal_length.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#petal width\n",
     "petalwid = sns.violinplot(x=x, y=\"petal_width\", data=iris, palette=pc, figsize=fs)\n",
     "#plt.show(petalwid)\n",
-    "plt.savefig(\"petal_width.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/petal_width.jpeg\")\n",
     "plt.close()\n",
     "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html"
    ]
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
        "<function matplotlib.pyplot.close(fig=None)>"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -746,19 +746,19 @@
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"sepal_length\", hue=\"species\", style=x, palette=pc)\n",
     "#plt.show()\n",
-    "plt.savefig(\"relplotsepallength.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/relplotsepallength.jpeg\")\n",
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"sepal_width\", hue=\"species\", style=x, palette=pc)\n",
     "#plt.show()\n",
-    "plt.savefig(\"relplotsepalwidth.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/relplotsepalwidth.jpeg\")\n",
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"petal_width\", hue=\"species\", style=x, palette=pc)\n",
     "#plt.show()\n",
-    "plt.savefig(\"relplotpetalwidth.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/relplotpetalwidth.jpeg\")\n",
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"petal_length\", hue=\"species\", style=x, palette=pc)\n",
     "#plt.show()\n",
-    "plt.savefig(\"relplotpetallength.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/relplotpetallength.jpeg\")\n",
     "\n",
     "plt.close\n",
     "#REF https://seaborn.pydata.org/generated/seaborn.relplot.html\n",
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
     "pairs.map_offdiag(sns.scatterplot)\n",
     "\n",
     "#plt.show()\n",
-    "plt.savefig(\"pairgrid_iris.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/pairgrid_iris.jpeg\")\n",
     "\n",
     "#REF https://seaborn.pydata.org/generated/seaborn.PairGrid.html"
    ]
