removed comment out for show() code

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -653,25 +653,25 @@
     "fs = \"10, 10\" #figsize\n",
     "x = \"species\"\n",
     "sepallen = sns.violinplot(x=x, y=\"sepal_length\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(sepallen)\n",
+    "plt.show(sepallen)\n",
     "plt.savefig(\"./Relevant Files/Images/sepal_length.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#sepal width\n",
     "sepalwid = sns.violinplot(x=x, y=\"sepal_width\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(sepalwid)\n",
+    "plt.show(sepalwid)\n",
     "plt.savefig(\"./Relevant Files/Images/sepal_width.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#petal length\n",
     "petallen = sns.violinplot(x=x, y=\"petal_length\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(petallen)\n",
+    "plt.show(petallen)\n",
     "plt.savefig(\"./Relevant Files/Images/petal_length.jpeg\")\n",
     "plt.close()\n",
     "\n",
     "#petal width\n",
     "petalwid = sns.violinplot(x=x, y=\"petal_width\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(petalwid)\n",
+    "plt.show(petalwid)\n",
     "plt.savefig(\"./Relevant Files/Images/petal_width.jpeg\")\n",
     "plt.close()\n",
     "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html"
@@ -745,19 +745,19 @@
     "iris = sns.load_dataset(\"iris\")\n",
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"sepal_length\", hue=\"species\", style=x, palette=pc)\n",
-    "#plt.show()\n",
+    "plt.show()\n",
     "plt.savefig(\"./Relevant Files/Images/relplotsepallength.jpeg\")\n",
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"sepal_width\", hue=\"species\", style=x, palette=pc)\n",
-    "#plt.show()\n",
+    "plt.show()\n",
     "plt.savefig(\"./Relevant Files/Images/relplotsepalwidth.jpeg\")\n",
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"petal_width\", hue=\"species\", style=x, palette=pc)\n",
-    "#plt.show()\n",
+    "plt.show()\n",
     "plt.savefig(\"./Relevant Files/Images/relplotpetalwidth.jpeg\")\n",
     "\n",
     "sns.relplot(data=iris, x=\"species\", y=\"petal_length\", hue=\"species\", style=x, palette=pc)\n",
-    "#plt.show()\n",
+    "plt.show()\n",
     "plt.savefig(\"./Relevant Files/Images/relplotpetallength.jpeg\")\n",
     "\n",
     "plt.close\n",
@@ -795,7 +795,7 @@
     "pairs.map_diag(sns.histplot)\n",
     "pairs.map_offdiag(sns.scatterplot)\n",
     "\n",
-    "#plt.show()\n",
+    "plt.show()\n",
     "plt.savefig(\"./Relevant Files/Images/pairgrid_iris.jpeg\")\n",
     "\n",
     "#REF https://seaborn.pydata.org/generated/seaborn.PairGrid.html"
