data classification and variable types addition and discussion

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "19           5.1          3.8           1.5          0.3  setosa"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -571,9 +571,47 @@
    "source": [
     "#### Analysis and Classifications\n",
     "\n",
+    "##### Classification of Data and Variables\n",
+    "\n",
+    "Each variable can be classified into various types based on their characteristics, information type and basic nature. Understanding the classification helps us understand how to use the data and even when plotting data items and groups. \n",
+    "\n",
+    "The main classification of the Iris variables are as follows:\n",
+    "\n",
+    "| Categorical | Numerical | \n",
+    "| ----------- | --------- |\n",
+    "| Nominal | Continuous |\n",
+    "|         | Discrete |\n",
+    "\n",
+    "1. **Categorical** Data Classification: \n",
+    "   1. **Nominal**: These are variable the describes something with a name or category and in this instance `species`. Another example would be `county`, `car_model` etc. These are variables that cannot be quantifiable generally and point to what the **numerical** actually is in **reality**.\n",
+    "\n",
+    "2. **Numerical** Data Classification: \n",
+    "   1. **Continuous**: These are variables that cannot be negetive numbers and infinite. For example, the height or width of a bread loaf could be any of either size realistically. In this case it looks at `sepal_height`, `sepal_width`, `petal_length` and `petal_width`.\n",
+    "\n",
+    "3. **Numerical** Data Classification: \n",
+    "   1. **Discrete**: The are similar to Continuous but have a finite number. For example, the number of iris flowers/plants measured for the data set. \n",
+    "   \n",
+    "Categorical is a Qualitative Classifcation overall and Numerical is Quantitative. Both are the only types within the Iris Data Set.\n",
+    "\n",
+    "#REF https://www150.statcan.gc.ca/n1/edu/power-pouvoir/ch8/5214817-eng.htm#\n",
+    " \n",
     "##### Common Variable Types\n",
     "\n",
-    "##### Scales of Measurement in Mathematics, Statistics and Python"
+    "Within the Iris Dataset our variables can be catagorized as such:\n",
+    "\n",
+    "| Categorical | Numerical |\n",
+    "| ----------- | --------- |\n",
+    "| Species: | Measurements: |\n",
+    "| Setosa | Sepal Length |\n",
+    "| Veriscolor | Sepal Width |\n",
+    "| Virginica | Petal Length |\n",
+    "| | Petal Width |\n",
+    "\n",
+    "##### Scales of Measurement in Mathematics, Statistics and Python\n",
+    "\n",
+    "\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -585,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +754,8 @@
     "plt.savefig(\"./Relevant Files/Images/petal_width.jpeg\")\n",
     "\n",
     "plt.close()\n",
-    "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html"
+    "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html\n",
+    "#REF https://www.statology.org/seaborn-title/"
    ]
   },
   {
@@ -728,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +843,7 @@
        "<function matplotlib.pyplot.close(fig=None)>"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -853,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
