data image and some addition small edits

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 315,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "19           5.1          3.8           1.5          0.3  setosa"
       ]
      },
-     "execution_count": 316,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -591,9 +591,12 @@
     "3. **Numerical** Data Classification: \n",
     "   1. **Discrete**: The are similar to Continuous but have a finite number. For example, the number of iris flowers/plants measured for the data set. \n",
     "   \n",
-    "Categorical is a Qualitative Classifcation overall and Numerical is Quantitative. Both are the only types within the Iris Data Set.\n",
+    "Categorical is also known as Qualitative Variables, as with Numerical which is known as Quantitative. These two variables are present in the Iris data set, along with the Discrete type variable. \n",
     "\n",
+    "![Data Types](./Relevant%20Files/Images/data_types.jpeg \"https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5958489/figure/fig1-2192568217746998/\")\n",
     "#REF https://www150.statcan.gc.ca/n1/edu/power-pouvoir/ch8/5214817-eng.htm#\n",
+    "REF https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5958489/#:~:text=A%20qualitative%20variable%2C%20also%20called,categorical%20data%3A%20nominal%20and%20ordinal.\n",
+    "\n",
     " \n",
     "##### Common Variable Types\n",
     "\n",
@@ -623,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +846,7 @@
        "<function matplotlib.pyplot.close(fig=None)>"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -892,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
