--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 528,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "19           5.1          3.8           1.5          0.3  setosa"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 529,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 530,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 531,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 532,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,29 +693,23 @@
     "pc = \"bright\" #palette color\n",
     "fs = \"10, 10\" #figsize\n",
     "x = \"species\"\n",
-    "sepallen = sns.violinplot(x=x, y=\"sepal_length\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(sepallen)\n",
-    "plt.savefig(\"./Relevant Files/Images/sepal_length.jpeg\")\n",
     "\n",
+    "#aesthetics\n",
+    "sns.set_style(\"darkgrid\")\n",
+    "sns.set_palette(\"muted\")\n",
     "\n",
-    "#sepal width\n",
-    "sepalwid = sns.violinplot(x=x, y=\"sepal_width\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(sepalwid)\n",
-    "plt.savefig(\"./Relevant Files/Images/sepal_width.jpeg\")\n",
+    "fig, axes = plt.subplots(2, 2)\n",
     "\n",
+    "sns.violinplot(x=x, y=\"sepal_length\", data=iris, width=1, density_norm=\"count\", native_scale=True, ax=axes[0,0])\n",
+    "sns.violinplot(x=x, y=\"sepal_width\", data=iris, width=1, density_norm=\"count\", native_scale=True, ax=axes[0,1])\n",
+    "sns.violinplot(x=x, y=\"petal_length\", data=iris, width=1, density_norm=\"count\", native_scale=True, ax=axes[1,0])\n",
+    "sns.violinplot(x=x, y=\"petal_width\", data=iris, width=1, density_norm=\"count\", native_scale=True, ax=axes[1,1])\n",
     "\n",
-    "#petal length\n",
-    "petallen = sns.violinplot(x=x, y=\"petal_length\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(petallen)\n",
-    "plt.savefig(\"./Relevant Files/Images/petal_length.jpeg\")\n",
-    "\n",
-    "\n",
-    "#petal width\n",
-    "petalwid = sns.violinplot(x=x, y=\"petal_width\", data=iris, palette=pc, figsize=fs)\n",
-    "#plt.show(petalwid)\n",
-    "plt.savefig(\"./Relevant Files/Images/petal_width.jpeg\")\n",
+    "plt.savefig(\"./Relevant Files/Images/violinplot_variables.jpeg\")\n",
     "\n",
     "plt.close()\n",
+    "\n",
+    "#REF https://www.statology.org/seaborn-subplots/#:~:text=You%20can%20use%20the%20following,chart%20in%20each%20subplot%20sns.\n",
     "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html\n",
     "#REF https://www.statology.org/seaborn-title/"
    ]
@@ -729,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +732,7 @@
        "<function matplotlib.pyplot.close(fig=None)>"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 535,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -818,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
