forgot a plt.show()

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -706,7 +706,7 @@
     "sns.violinplot(x=x, y=\"petal_width\", data=iris, width=1, density_norm=\"count\", native_scale=True, ax=axes[1,1])\n",
     "\n",
     "plt.savefig(\"./Relevant Files/Images/violinplot_variables.jpeg\")\n",
-    "\n",
+    "plt.show()\n",
     "plt.close()\n",
     "\n",
     "#REF https://www.statology.org/seaborn-subplots/#:~:text=You%20can%20use%20the%20following,chart%20in%20each%20subplot%20sns.\n",
