--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table of Contents:\n",
+    "## Table of Contents:\n",
     "\n",
     "[Fisher's Iris Data Set](#01)\n",
     "\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 608,
+   "execution_count": 617,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 608,
+     "execution_count": 617,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 609,
+   "execution_count": 618,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "19           5.1          3.8           1.5          0.3  setosa"
       ]
      },
-     "execution_count": 609,
+     "execution_count": 618,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 619,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "max        7.900000     4.400000      6.900000     2.500000"
       ]
      },
-     "execution_count": 610,
+     "execution_count": 619,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 611,
+   "execution_count": 620,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 621,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 613,
+   "execution_count": 622,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 623,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 624,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "<function matplotlib.pyplot.close(fig=None)>"
       ]
      },
-     "execution_count": 615,
+     "execution_count": 624,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 625,
    "metadata": {},
    "outputs": [
     {
