task 5 summary section of data set added

--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -154,9 +154,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (814487097.py, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [53]\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "# importing libraries for use in tasks/projects - numpy for numerical arrays and random numbers\n",
     "import numpy as np\n",
@@ -173,7 +182,150 @@
     "\n",
     "def entropy():\n",
     "    \n",
-    "    "
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 5: Plotting the Penguin Data Set\n",
+    "\n",
+    "> Create appropriate individual plots for each variable in the Penguin Data Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Summarizing The Penguin Dataset\n",
+    "\n",
+    "To get the basic information of the data we will summarize it with `head()`, `shape()` to how much data we are working with and a small look at the data and it's variables we need to work with. We also check how many values there are of particular variables with `value_counts()` for `sex`, `species`, and `island`. Then we check for null values through out and print a summary of the data into a file to compare the results of our plots with."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+      "0  Adelie  Torgersen            39.1           18.7              181.0   \n",
+      "1  Adelie  Torgersen            39.5           17.4              186.0   \n",
+      "2  Adelie  Torgersen            40.3           18.0              195.0   \n",
+      "3  Adelie  Torgersen             NaN            NaN                NaN   \n",
+      "4  Adelie  Torgersen            36.7           19.3              193.0   \n",
+      "\n",
+      "   body_mass_g     sex  \n",
+      "0       3750.0    MALE  \n",
+      "1       3800.0  FEMALE  \n",
+      "2       3250.0  FEMALE  \n",
+      "3          NaN     NaN  \n",
+      "4       3450.0  FEMALE  \n",
+      "The penguin dataset contains (Rows, Columns):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(344, 7)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np  \n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "penguins = pd.read_csv(\"/Users/rebeccaquinn/Desktop/Data Analysis 22-24/S2-23/data_funds/Tasks/Relevant Files/penguins.csv\")\n",
+    "print(penguins.head())\n",
+    "\n",
+    "\n",
+    "print(\"The penguin dataset contains (Rows, Columns):\")\n",
+    "penguins.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species\n",
+      "Adelie       152\n",
+      "Gentoo       124\n",
+      "Chinstrap     68\n",
+      "dtype: int64\n",
+      "island\n",
+      "Biscoe       168\n",
+      "Dream        124\n",
+      "Torgersen     52\n",
+      "dtype: int64\n",
+      "sex\n",
+      "MALE      168\n",
+      "FEMALE    165\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checks the count of each species\n",
+    "print(penguins.value_counts(\"species\"))\n",
+    "\n",
+    "print(penguins.value_counts(\"island\"))\n",
+    "\n",
+    "print(penguins.value_counts(\"sex\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species               0\n",
+      "island                0\n",
+      "bill_length_mm        2\n",
+      "bill_depth_mm         2\n",
+      "flipper_length_mm     2\n",
+      "body_mass_g           2\n",
+      "sex                  11\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#checks for null values\n",
+    "print(penguins.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#summarise the information in order to read/write new file\n",
+    "summarize = penguins.describe()\n",
+    "#Outputs a summary of each variable to a single text file:\n",
+    "with open (\"summary.txt\", \"w+\") as file:\n",
+    "    file.write(summarize.to_string())\n",
+    "file.close()"
    ]
   },
   {
