--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -771,8 +771,7 @@
     "plt.close()\n",
     "\n",
     "#REF https://www.statology.org/seaborn-subplots/#:~:text=You%20can%20use%20the%20following,chart%20in%20each%20subplot%20sns.\n",
-    "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html\n",
-    "#REF https://www.statology.org/seaborn-title/"
+    "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html"
    ]
   },
   {
