--- a/Tasks/tasks.ipynb
+++ b/Tasks/tasks.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
      "evalue": "expected an indented block (814487097.py, line 17)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [53]\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  Input \u001b[0;32mIn [77]\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "(344, 7)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,30 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "species\n",
-      "Adelie       152\n",
-      "Gentoo       124\n",
-      "Chinstrap     68\n",
-      "dtype: int64\n",
-      "island\n",
-      "Biscoe       168\n",
-      "Dream        124\n",
-      "Torgersen     52\n",
-      "dtype: int64\n",
-      "sex\n",
-      "MALE      168\n",
-      "FEMALE    165\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#checks the count of each species\n",
     "print(penguins.value_counts(\"species\"))\n",
@@ -291,24 +270,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "species               0\n",
-      "island                0\n",
-      "bill_length_mm        2\n",
-      "bill_depth_mm         2\n",
-      "flipper_length_mm     2\n",
-      "body_mass_g           2\n",
-      "sex                  11\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#checks for null values\n",
     "print(penguins.isnull().sum())"
@@ -316,16 +280,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#summarise the information in order to read/write new file\n",
+    "#summarize the information in order to read/write new file\n",
     "summarize = penguins.describe()\n",
     "#Outputs a summary of each variable to a single text file:\n",
     "with open (\"summary.txt\", \"w+\") as file:\n",
     "    file.write(summarize.to_string())\n",
     "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scatterplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = [12.00, 12.00]\n",
+    "fig, axes = plt.subplots(2, 2)\n",
+    "\n",
+    "# Adjust the subplot \n",
+    "fig.subplots_adjust(hspace=0.50, wspace=0.25)\n",
+    "\n",
+    "sns.scatterplot(data=penguins, x=\"bill_depth_mm\", y=\"bill_length_mm\", hue=\"species\", ax=axes[0,0])\n",
+    "sns.scatterplot(data=penguins, x=\"bill_depth_mm\", y=\"bill_length_mm\", hue=\"island\", ax=axes[0,1])\n",
+    "sns.scatterplot(data=penguins, x=\"bill_depth_mm\", y=\"bill_length_mm\", hue=\"sex\", ax=axes[1,0])\n",
+    "\n",
+    "plt.show()\n",
+    "#plt.savefig(\"./Images/scatterplot_variables.jpeg\")\n",
+    "\n",
+    "plt.close()\n",
+    "#REF https://www.statology.org/seaborn-title/\n",
+    "#ref https://www.tutorialspoint.com/how-to-adjust-the-space-between-matplotlib-seaborn-subplots-for-multi-plot-layouts"
    ]
   },
   {
