reference list added and tidy up of footnote marks

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -625,8 +625,8 @@
     "Categorical is also known as Qualitative Variables, as with Numerical which is known as Quantitative. These two variables are present in the Iris data set, along with the Discrete type variable. \n",
     "\n",
     "![Data Types](./Relevant%20Files/Images/data_types.jpeg \"https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5958489/figure/fig1-2192568217746998/\")\n",
-    "#REF https://www150.statcan.gc.ca/n1/edu/power-pouvoir/ch8/5214817-eng.htm#\n",
-    "REF https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5958489/#:~:text=A%20qualitative%20variable%2C%20also%20called,categorical%20data%3A%20nominal%20and%20ordinal.\n",
+    "\n",
+    "[^7] [^8]\n",
     "\n",
     " \n",
     "##### Common Variable Types\n",
@@ -643,7 +643,11 @@
     "\n",
     "##### Scales of Measurement in Mathematics, Statistics and Python\n",
     "\n",
+    "There are four primary scales of measurement: *nominal*, *ordinal*, *interval*, and *ratio*. Each scale provides different information about the characteristics and properties of the data being measured which helps us to determine the use of the data. In the Iris Dataset there are 2 scales of measurement in use. These are the *Ratio Scale* for the majority and *Nominal Scale*. \n",
     "\n",
+    "The *Nominal scale* represents the species: `setosa`, `veriscolor` and `virgina` which are **categorical**. The *Ratio Scale* represents the four measurements, **numerical**, of the flowers: length, width of the sepal and the length, width of the petals. \n",
+    "\n",
+    "[^9] [^10]\n",
     "\n",
     "---"
    ]
@@ -672,7 +676,9 @@
     "\n",
     "pc = \"bright\" #palette color\n",
     "fs = \"10, 10\" #figsize\n",
-    "x = \"species\""
+    "x = \"species\"\n",
+    "\n",
+    "#[^11]"
    ]
   },
   {
@@ -714,7 +720,7 @@
     "#plt.savefig(\"./Relevant Files/Images/histogram.jpeg\") #remove the hash comment if you want to save a copy of the histogram image generated\n",
     "plt.close()\n",
     "\n",
-    "#REF https://matplotlib.org/stable/gallery/statistics/hist.html "
+    "#[^12]"
    ]
   },
   {
@@ -770,8 +776,7 @@
     "\n",
     "plt.close()\n",
     "\n",
-    "#REF https://www.statology.org/seaborn-subplots/#:~:text=You%20can%20use%20the%20following,chart%20in%20each%20subplot%20sns.\n",
-    "#REF https://matplotlib.org/stable/gallery/statistics/violinplot.html"
+    "#[^13] [^14]  "
    ]
   },
   {
@@ -865,9 +870,7 @@
     "plt.savefig(\"./Relevant Files/Images/relplotpetallength.jpeg\")\n",
     "\n",
     "plt.close\n",
-    "#REF https://seaborn.pydata.org/generated/seaborn.relplot.html\n",
-    "#REF https://www.geeksforgeeks.org/scatterplot-using-seaborn-in-python/\n",
-    "#REF https://seaborn.pydata.org/tutorial/relational.html"
+    "#[^15] [^16] [^17]"
    ]
   },
   {
@@ -939,7 +942,7 @@
     "sns.catplot(data=iris, x=\"species\", y=\"petal_length\", hue=\"species\", kind=\"boxen\")\n",
     "sns.catplot(data=iris, x=\"species\", y=\"petal_width\", hue=\"species\", kind=\"boxen\")\n",
     "\n",
-    "#ref https://seaborn.pydata.org/generated/seaborn.catplot.html"
+    "#[^18]"
    ]
   },
   {
@@ -981,7 +984,7 @@
     "#plt.show()\n",
     "plt.savefig(\"./Relevant Files/Images/pairgrid_iris.jpeg\")\n",
     "\n",
-    "#REF https://seaborn.pydata.org/generated/seaborn.PairGrid.html"
+    "#[^19]"
    ]
   },
   {
@@ -1001,7 +1004,25 @@
     "\n",
     "</a>\n",
     "\n",
-    "[^1]: https://gist.github.com/curran/a08a1080b88344b0c8a7"
+    "[^1]: “Iris Data Set - UCI Machine Learning Repository” https://gist.github.com/curran/a08a1080b88344b0c8a7\n",
+    "[^2]: “pandas.DataFrame.head — pandas 2.1.4 documentation” https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.head.html\n",
+    "[^3]: “pandas.DataFrame.info — pandas 2.1.4 documentation https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.info.html\n",
+    "[^4]: “pandas.DataFrame.shape — pandas 2.1.4 documentation” https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.shape.html\n",
+    "[^5]: “Pandas DataFrame describe() Method” https://www.w3schools.com/python/pandas/ref_df_describe.asp#:~:text=The describe() method returns,The average (mean) value.\n",
+    "[^6]: “pandas.DataFrame.isnull” — pandas 2.1.4 documentation” https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.isnull.html\n",
+    "[^7]: “4.2 Types of variables” https://www150.statcan.gc.ca/n1/edu/power-pouvoir/ch8/5214817-eng.htm#\n",
+    "[^8]: “The Anatomy of Data” https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5958489/#:~:text=A qualitative variable, also called,categorical data: nominal and ordinal. \n",
+    "[^9]: “Categorical and Numerical Types of Data | 365 Data Science” https://365datascience.com/tutorials/statistics-tutorials/numerical-categorical-data/\n",
+    "[^10]: “Types of data & the scales of measurement” https://studyonline.unsw.edu.au/blog/types-of-data#:~:text=Scales of measurement is how,to properly analyse the data.\n",
+    "[^11]: “Python Modules: What are and How to Import Modules in Python? | DataCamp” https://www.datacamp.com/tutorial/modules-in-python\n",
+    "[^12]: “Histograms — Matplotlib 3.8.2 documentation” https://matplotlib.org/stable/gallery/statistics/hist.html\n",
+    "[^13]: “How to Create Subplots in Seaborn (With Examples) - Statology” https://www.statology.org/seaborn-subplots/#:~:text=You%20can%20use%20the%20following,chart%20in%20each%20subplot%20sns.\n",
+    "[^14]: “Violin plot basics — Matplotlib 3.8.2 documentation” https://matplotlib.org/stable/gallery/statistics/violinplot.html\n",
+    "[^15]: “seaborn.relplot — seaborn 0.13.1 documentation” https://seaborn.pydata.org/generated/seaborn.relplot.html\n",
+    "[^16]: “Scatterplot using Seaborn in Python - GeeksforGeeks” https://www.geeksforgeeks.org/scatterplot-using-seaborn-in-python/ \n",
+    "[^17]: “Visualizing statistical relationships — seaborn 0.13.1 documentation” https://seaborn.pydata.org/tutorial/relational.html\n",
+    "[^18]: “seaborn.catplot — seaborn 0.13.1 documentation” https://seaborn.pydata.org/generated/seaborn.catplot.html\n",
+    "[^19]: “seaborn.PairGrid — seaborn 0.13.1 documentation” https://seaborn.pydata.org/generated/seaborn.PairGrid.html"
    ]
   },
   {
