more information added or edited for plots and choice

--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -735,7 +735,8 @@
    "metadata": {},
    "source": [
     "##### Violin Plot\n",
-    "Violin plots help show the different variables based on a catagory. In this case it is the `species` and their relevant variables in the dataframe."
+    "\n",
+    "Violin plots help show the different variables based on a catagory. In this case it is the `species` and their relevant variables in the dataset. The violin plot also shows us the distribution of the values, like the scatterplot but it also shows the definite outliers, the percentages or quartiles showing clusters and the median similar to boxplots. "
    ]
   },
   {
@@ -790,7 +791,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Scatterplot\n"
+    "##### Relplot\n",
+    "\n",
+    "Here I have used a relplot to separate the species using the x axis and hue to define them with colour. This shows us patterns in the Iris flowers which otherwise look incredibly similar. The features and their length and width are shown linearly on the plots below with the species side by side on the y axis. "
    ]
   },
   {
@@ -877,7 +880,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Cat Plot"
+    "##### Cat Plot\n",
+    "\n",
+    "The catplot is used to show the individual categorical relationship against one of the numeric measurements. This helps use see how each species is different depending on the measurement variable chosen. The `kind` I have chose below is `\"boxen\"` and this I felt was the easiest to read when looking at a catplot as it shows where the majority of each variable falls on the measurments and any outliers like scatterplots also do."
    ]
   },
   {
@@ -956,7 +961,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Pair Grid"
+    "##### Pair Grid\n",
+    "\n",
+    "I have chosen the Pair Grid in this case as it is able to display multiple numerical data points which helps understand the relationship between the variables and gives a comparitive analysis all in one graph. You can change each graphs to different types if required or to make the information and results more accesible. For the Pair Grid below it is displaying **histagrams** and **scatterplots**."
    ]
   },
   {
